// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles class binding and CSS are merged 1`] = `
Object {
  "component": Object {
    "@type": "@builder.io/mitosis/component",
    "children": Array [
      Object {
        "@type": "@builder.io/mitosis/node",
        "bindings": Object {
          "class": Object {
            "code": "state.classState + ' div'",
          },
          "style": Object {
            "code": "state.styleState",
          },
        },
        "children": Array [
          Object {
            "@type": "@builder.io/mitosis/node",
            "bindings": Object {},
            "children": Array [],
            "meta": Object {},
            "name": "div",
            "properties": Object {
              "_text": "
      Hello! I can run in React, Vue, Solid, or Liquid!
    ",
            },
            "scope": Object {},
          },
        ],
        "meta": Object {},
        "name": "div",
        "properties": Object {},
        "scope": Object {},
      },
    ],
    "context": Object {
      "get": Object {},
      "set": Object {},
    },
    "exports": Object {},
    "hooks": Object {},
    "imports": Array [],
    "inputs": Array [],
    "meta": Object {},
    "name": "MyBasicComponent",
    "refs": Object {},
    "state": Object {
      "classState": "testClassName",
      "styleState": Object {
        "color": "red",
      },
    },
    "subComponents": Array [],
  },
  "output": ".div { 
padding: 10px; }",
}
`;

exports[`Styles class property and CSS are merged 1`] = `
Object {
  "component": Object {
    "@type": "@builder.io/mitosis/component",
    "children": Array [
      Object {
        "@type": "@builder.io/mitosis/node",
        "bindings": Object {},
        "children": Array [
          Object {
            "@type": "@builder.io/mitosis/node",
            "bindings": Object {},
            "children": Array [],
            "meta": Object {},
            "name": "div",
            "properties": Object {
              "_text": "
      Hello! I can run in React, Vue, Solid, or Liquid!
    ",
            },
            "scope": Object {},
          },
        ],
        "meta": Object {},
        "name": "div",
        "properties": Object {
          "class": "test div",
        },
        "scope": Object {},
      },
    ],
    "context": Object {
      "get": Object {},
      "set": Object {},
    },
    "exports": Object {},
    "hooks": Object {},
    "imports": Array [],
    "inputs": Array [],
    "meta": Object {},
    "name": "MyBasicComponent",
    "refs": Object {},
    "state": Object {},
    "subComponents": Array [],
  },
  "output": ".div { 
padding: 10px; }",
}
`;
